More accurate timeout detection